[package]
name = "proton"
version = "0.2.0"
edition = "2024"


[dependencies]
async_zip = { version = "0.0.17", features = ["deflate", "tokio", "tokio-fs"] }
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
once_cell = "1.21.3"
os_info = "3.12.0"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "full"] }
tokio-test = "0.4.4"
uuid = { version = "1.17.0", features = ["v4"] }
